# hanabi-gbs

./: CMakeLists.txt  README.md
hanabi-learning-environment/hanabi_lib/: canonical_encoders.cc
pyhanabi/: README.md  eval.py  legacy_agent.py  r2d2.py  r2d2_beliefmodule.py  selfplay.py  sparta.py  transformer_embedding.py  transformer_embedding_r2d2.py  utils.py
rela/: batcher.cc  batcher.h
rlcc/: hybrid_model.cc  hybrid_model.h  pybind.cc  sparta.cc  sparta.h
